# sentry_description

./: CMakeLists.txt  README.md  package.xml
CAD/parts/Lidar/: ydlidar_x4 v2.stl
CAD/parts/Zed/: Zed2.f3d  Zed2.stl
CAD/parts/base_link/: base_link.stl  base_link_v3.stl  base_link_v4.stl
CAD/parts/complete-assembly/: assembly.stl  complete_assembly.stl
CAD/parts/motor/: 0473 - Motor DG-168A2 assembly.SLDPRT  motor_1 v1.f3d  motor_1 v1.stl
CAD/parts/sentry_frame/: sentry_frame v40.f3d
CAD/parts/wheel/: Tire v5.stl  wheel v3.stl  wheel.f3d  wheel.stl
launch/: zed2.launch  zed_camera.launch.xml  zed_no_tf.launch  zed_no_tf.launch.xml
meshes/: base_link.stl  motor.stl  wheel.stl
meshes/OLD/: wheel v7.stl
plugin/: CMakeLists.txt  package.xml
plugin/src/: gazebo_ros_laser.cpp
rviz/: mode.rviz  model.rviz
urdf/: materials.xacro  sentry.gazebo  sentry.xacro  zed_descr.urdf.xacro
